--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
+    "axios": "^0.12.0",
     "babel": "^6.5.2",
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
