--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "4.13.3",
     "lodash": "3.10.1",
     "react": "^15.1.0",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.1.0",
     "webpack": "^1.13.1"
   },
